--- a/23_android_apk_library_jni/apk/ClientApp/app/src/main/AndroidManifest.xml
+++ b/23_android_apk_library_jni/apk/ClientApp/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.security.landicorp.vulnerabilitydetect">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.security.landicorp.clientapp">
 
     <application
         android:allowBackup="true"
@@ -12,22 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-    	<service android:name=".DeamonService">
-        </service>
-	
 	<service
-            android:name="com.security.landicorp.vulnerabilitydetect.RemoteService"
-            android:process=":remote"
-            android:exported="true" >
+		android:name="com.security.landicorp.vulnerabilitydetect.RemoteService">
             <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
                 <action android:name="landicorp.intent.action.BIND_REMOTE_SERVICE" />
             </intent-filter>
         </service>
 
-	<activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
